--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "description": "Rector checkstyle output",
   "require": {
-    "php": "^7.4|^8.0",
-    "rector/rector": "^0.11"
+    "php": "^7.4|^8.0|^8.1",
+    "rector/rector": "^0.12"
   },
   "autoload": {
     "psr-4": {
